<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">

    <ImageView
        android:id="@+id/ivRegister"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/putih"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/ivRegister"
        app:layout_constraintStart_toStartOf="@id/ivRegister"
        app:layout_constraintTop_toBottomOf="@id/ivRegister" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtRegister"
        android:hint="@string/name"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="40dp"
        android:inputType="text"
        android:autofillHints="Fullname"
        style="@style/Widget.AppCompat.EditText" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRegister"
        android:hint="@string/age"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="100dp"
        style="@style/Widget.AppCompat.EditText"
        android:autofillHints="age"
        android:inputType="number" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRegister"
        android:hint="@string/phone"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="160dp"
        style="@style/Widget.AppCompat.EditText"
        android:autofillHints="phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRegister"
        android:hint="@string/email"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="220dp"
        style="@style/Widget.AppCompat.EditText"
        android:autofillHints="email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRegister"
        android:hint="@string/alamat"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="280dp"
        style="@style/Widget.AppCompat.EditText"
        android:autofillHints="alamat"
        android:inputType="text" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRegister"
        android:hint="@string/password"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="340dp"
        style="@style/Widget.AppCompat.EditText"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/ivstyle"
        android:layout_width="500dp"
        android:layout_height="247dp"
        android:layout_marginTop="510dp"
        android:src="@drawable/style1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="193dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:layout_weight="1"
            android:backgroundTint="#F12727"
            android:text="@string/Register" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toTopOf="@+id/ivstyle"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have account? Login Here"
            android:textColor="#FF0012"
            android:layout_marginLeft="57dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>